grammar.js
    series_of_games: $ => seq(
      repeat(
        seq(
          optional(field('freestanding_comment', $.freestanding_comment)),
          field('game', $.game),
        )),
      optional(field('freestanding_comment', $.freestanding_comment)),
    ),

    ///
    /// grammar: game
    ///

    // http://www.saremba.de/chessgml/standards/pgn/pgn-complete.htm#c8.1
    // "The tag pair section is composed of a series of zero or more tag pairs."
    // which must be supported as it occurs in the wild as well
    //
    // http://www.saremba.de/chessgml/standards/pgn/pgn-complete.htm#c8.2.6
    // "Each movetext section has exactly one game termination marker"
    // which cannot be enforced as games without termination markers are
    // frequent in the wild.
    //
    // Therefore the below requires _either_ a header or a termination
    // marker/result_code.

    game: $ => choice(
      seq(
        field('header', $.header),
        optional($._empty_line),
        field('movetext', $.movetext),
        optional($.trailing_garbage),
        field('result_code', $.result_code),
      ),
      seq(
        field('header', $.header),
        optional($._empty_line),
        field('result_code', $.result_code),
      ),
      seq(
        field('header', $.header),
        optional($._empty_line),
        field('movetext', $.movetext),
      ),
      seq(
        field('movetext', $.movetext),
        optional($.trailing_garbage),
        field('result_code', $.result_code),
      )),

    _empty_line: $ => /\r?\n\r?\n/,

    ///
    /// grammar: free-standing comment
    ///

    rest_of_line_comment_delimiter_open: $ => choice(
      ';',
      // "%" only introduces a comment when placed at the first column of a
      // line, which is handled by this assertion via a scanner.c.  These
      // rarely-seen comments are called "escapes" in the spec, and we could
      // consider giving them a distinct field name.  However, the consumer
      // could also simply consult the delimiter character.
      seq($._full_line_comment_delimiter_bol_assertion, '%'),
    ),

    rest_of_line_comment: $ => seq(
      field('comment_delimiter', $.rest_of_line_comment_delimiter_open),
      field('comment_content', $.rest_of_line_comment_text),
      optional(/\r?\n/),
    ),

    rest_of_line_comment_text: $ => token.immediate(/[^\r\n]*/),

    // Definitely not in the spec, but occurs thousands of times in the most
    // important published collection of master chess games.  The Week in
    // Chess (TWIC) stopped using this markdown-like construct in 2009.
    // Surprisingly, this rule doesn't slow down the parser.
    header: $ => prec.right(-1,
      seq(
        field('tagpair', $.tagpair),
        repeat(
          choice(
            field('tagpair', $.tagpair),
            field('comment', choice(
              $.inline_comment,
              $.rest_of_line_comment,
            )),
            $._empty_line,
          )))),

    tagpair_delimiter_open: $ => repeat1('['),

    tagpair_delimiter_close: $ => repeat1(']'),

    double_quote: $ => confusables.double_quote,

    tagpair: $ => seq(
      field('tagpair_delimiter', $.tagpair_delimiter_open),
      field('tagpair_key', $.tagpair_key),
      $._tagpair_value,
      field('tagpair_delimiter', $.tagpair_delimiter_close),
    ),

    // Not to spec, but keys with whitespace occur in the wild.
    // This regex could also be much more restrictive.
    tagpair_key: $ => token(/[^"＂“”‟″‶〃״˝ʺ˶ˮײ\[\]\{\};%\r\n]+/),

    _tagpair_value: $ => choice(
      seq(
        field('tagpair_value_delimiter', $.double_quote),
        field('tagpair_value_delimiter', $.double_quote),
      ),
      seq(
        field('tagpair_value_delimiter', $.double_quote),
        field('tagpair_value_contents', $.tagpair_value_contents),
        field('tagpair_value_delimiter', $.double_quote),
      )),

    tagpair_value_contents: $ => repeat1(
      choice(
        // invert confusables.double_quote
        token.immediate(/[^"＂“”‟″‶〃״˝ʺ˶ˮײ\r\n]+/),
        confusables.double_quote,
      )),

    ///
    /// grammar: movetext
    ///

    movetext: $ => prec.right(-1,
      repeat1(
        $._movetext_element,
      )),

    _movetext_element: $ => choice(
      field('move_number', $.move_number),
      $._san_move,
      $._lan_move,
      $._annotation,
      field('comment', $.inline_comment),
      field('comment', $.rest_of_line_comment),
      $.variation,
    ),

    // Repeated code to give variation moves a distinct field name
    move_number: $ => /\d+[AaBb]?(\s+|\s*[\.𝅭․܁‎܂꘎‎٠۰ꓸ][\s\.𝅭․܁‎܂꘎‎٠۰ꓸ]*)/,

    // not to spec: commas after SAN moves
    san_move: $ => seq(
      $._san_move_piece,
      optional($.check_or_mate_condition),
    ),

    _san_move_piece: $ => choice(
      $._san_move_pawn,
      $._san_drop_pawn,
      $._san_move_major_or_minor_piece,
      $._san_drop_major_or_minor_piece,
      $._san_move_castle,
      $._san_null_move,
    ),

    check_or_mate_condition: $ => token.immediate(
      choice(
        confusables.plus,
        seq(confusables.plus, confusables.plus),
        '#',
      )),

    // not to spec: punctuation trailing annotations
    result_code: $ => choice(
      seq('1', confusables.dash, confusables.o),
      seq(confusables.o, confusables.dash, '1'),
      seq('1', confusables.slash, '2', confusables.dash, '1', confusables.slash, '2'),
      seq(confusables.half, confusables.dash, confusables.half),
      confusables.asterisk,
      // these would get confused with dotless move numbers unless wrapped in token()
      token(seq('1 ', confusables.dash, ' ', confusables.o)),
      token(seq(confusables.o, ' ', confusables.dash, ' 1')),
      token(seq('1 ', confusables.slash, ' 2 ', confusables.dash, ' 1 ', confusables.slash, ' 2')),
      token(seq(confusables.half, ' ', confusables.dash, ' ', confusables.half)),
    ),
  }
});

///
/// utility functions
///

function case_insensitive_regex(string, as_fragment=false) {
  let expression = '';

  for (const ch of string) {
    if (['\\', '(', ')', '[', ']', '{', '}', '.', '*', '+', '?'].includes(ch)) {
      expression = expression + '\\' + ch;
    } else if (ch.toLowerCase() === ch.toUpperCase()) {
      expression = expression + ch;
    } else {
      expression = expression + '[' + ch.toUpperCase() + ch.toLowerCase() + ']';
    }
  }

  if (as_fragment) {
    return expression;
  } else {
    return new RegExp(expression);
  }
}

function html_entity(literal, name=null, as_fragment=false) {
  let alternation = [];

  let decimal_codepoint = literal.codePointAt(0);

  if (typeof name === 'string') {
    name = [ name ];
  }

  if (Array.isArray(name)) {
    for (const nm of name) {
      alternation.push(`&${nm};`);
    }
  }

  alternation.push(`&#${decimal_codepoint};`);

  let hex_codepoint = case_insensitive_regex(decimal_codepoint.toString(16), true);
  alternation.push(`&#[Xx]${hex_codepoint};`);

  if (as_fragment) {
    return alternation.join('|');
  } else {
    return new RegExp(alternation.join('|'));
  }
}
