test/corpus/result_codes.txt
================================================================================
Loss result code
================================================================================

[Event "?"]

1. d4
0-1

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))

================================================================================
Win result code
================================================================================

[Event "?"]

1. d4
1-0

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))

================================================================================
Draw result code
================================================================================

[Event "?"]

1. d4
1/2-1/2

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))

================================================================================
Unterminated result code
================================================================================

[Event "?"]

1. d4
*

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))

================================================================================
Irregular loss result code
================================================================================

[Event "?"]

1. d4
0 - 1

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))

================================================================================
Irregular win result code
================================================================================

[Event "?"]

1. d4
1—0

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))

================================================================================
Irregular draw result code
================================================================================

[Event "?"]

1. d4
1 / 2 - 1 ∕ 2

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))

================================================================================
Result code without newline
================================================================================

[Event "?"]

1. d4 1-0

--------------------------------------------------------------------------------

(series_of_games
  (game
    (header
      (tagpair
        (tagpair_delimiter_open)
        (tagpair_key)
        (double_quote)
        (tagpair_value_contents)
        (double_quote)
        (tagpair_delimiter_close)))
    (movetext
      (move_number)
      (san_move))
    (result_code)))
